2004-12-08  Zoltan Varga  <vargaz@freemail.hu>

	* Assembly.cs: Move corlib_internal field to AssemblyBuilder.

2004-12-06  Zoltan Varga  <vargaz@freemail.hu>

	* Assembly.cs: Add corlib_internal field.

2004-11-30  Martin Baulig  <martin@ximian.com>

	* MonoGenericInst.cs: Renamed to MonoGenericClass.cs and also
	renamed the class from `MonoGenericInst' to `MonoGenericClass'.

2004-11-05  Zoltan Varga  <vargaz@freemail.hu>

	* AssemblyName.cs (FullName): Omit default values from full name.

	* Assembly.cs: Implement GetFiles (bool).

	* Binder.cs: Add support for byref types. Fixes #69140.

2004-10-12  Martin Baulig  <martin@ximian.com>

	* MonoGenericInst.cs (MonoGenericInst): Call initialize() just
	before calling the *_internal() methods.

2004-10-12  Zoltan Varga  <vargaz@freemail.hu>

	* MethodBody.cs: Implement this.

2004-10-08  Zoltan Varga  <vargaz@freemail.hu>

	* Module.cs: Handle the case when the global type does not exists.

2004-10-03  Zoltan Varga  <vargaz@freemail.hu>

	* LocalVariableInfo.cs: Reorganize fields so LocalBuilder can inherit
	from this class.

2004-09-28  Zoltan Varga  <vargaz@freemail.hu>

	* PropertyInfo.cs (OptionalCustomModifiers): Add [MonoTODO].

	* PropertyInfo.cs: Add stub for GetConstantValue ().	

	* ParameterInfo.cs (marshalAs): Make this private.

	* Module.cs (ModuleHandle): Add [CLSCompliant(false)].

	* LocalVariableInfo.cs MethodBody.cs: Disable default constructor.

	* ExceptionHandlingClause.cs: Disable default constructor.

2004-09-27  Zoltan Varga  <vargaz@freemail.hu>

	* CustomAttributeData.cs CustomAttributeTypedArgument.cs 
	CustomAttributeNamedArgument.cs: New files.

	* MethodBody.cs LocalVariableInfo.cs ExceptionHandlingClause.cs
	ExceptionHandlingClauseFlags.cs: New files.

2004-09-26  Zoltan Varga  <vargaz@freemail.hu>

	* FieldInfo.cs: Add support for returning MarshalAsAttribute.

	* ParameterInfo.cs: Add marshalAs field, add support for returning
	MarshalAsAttribute.
