@@ -48,20 +48,19 @@ namespace System.Reflection {
 		internal MethodBody () {
 		}
 
-#if FIXME
-// gmcs can't compile this
+		[CLSCompliant (false)]
 		public IList<ExceptionHandlingClause> ExceptionHandlingClauses {
 			get {
 				return Array.AsReadOnly<ExceptionHandlingClause> (clauses);
 			}
 		}
 
+		[CLSCompliant (false)]
 		public IList<LocalVariableInfo> LocalVariables {
 			get {
 				return Array.AsReadOnly<LocalVariableInfo> (locals);
 			}
 		}
-#endif
 
 		public bool InitLocals {
 			get {
